--- a/mimicINT/container/.env
+++ b/mimicINT/container/.env
@@ -1,15 +1,15 @@
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY='l+hcc!+t69at_p3nr9p_!xg4a9e94!5%=&6-i%((#eluf*g#ei'
+#SECRET_KEY=''
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG=True
 
-#ALLOWED_HOSTS=['10.1.2.48', '0.0.0.0', '127.0.0.1', '134.158.249.145']
 
 
 
 
-ALLOWED_HOSTS=0.0.0.0 172.18.0.1 10.1.7.10 localhost 127.0.0.1 10.184.10.13 mimicintweb.tagc.univ-amu.fr vm06.tagc.dcs.univ-amu.fr
+
+ALLOWED_HOSTS=0.0.0.0 localhost 127.0.0.1
 
 
 
@@ -23,8 +23,8 @@ DB_ENGINE=django.db.backends.postgresql
 DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=mimicINT_db
-DB_USER=django
-DB_PASSWORD=mimicINTweb
+#DB_USER=
+#DB_PASSWORD=
 
 
 ## repertory home project
