--- a/mimicINT/container/.env
+++ b/mimicINT/container/.env
@@ -23,7 +23,8 @@ DB_ENGINE=django.db.backends.postgresql
 DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=mimicINT_db
-#DB_USER=
+USER = django
+#set your password here
 #DB_PASSWORD=
 
 
